[gd_scene load_steps=6 format=3 uid="uid://bko0p24aqbi22"]

[ext_resource type="Theme" uid="uid://cdlmeu2nbgr5w" path="res://inventory/inventory_theme.tres" id="1_hwhfl"]
[ext_resource type="Script" uid="uid://cjyuajvfhm1rr" path="res://globals/inventory_manager.gd" id="1_q5pxl"]
[ext_resource type="Texture2D" uid="uid://ce2eh4aexw6b1" path="res://inventory/sprites/notebook.png" id="3_hwhfl"]
[ext_resource type="PackedScene" uid="uid://cdq67051bvi30" path="res://inventory/tab.tscn" id="4_ee8kr"]
[ext_resource type="Texture2D" uid="uid://bsddn46lbs1r" path="res://inventory/sprites/fold.png" id="5_8537s"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="InventoryManager" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_hwhfl")
script = ExtResource("1_q5pxl")

[node name="NotebookBackground" type="NinePatchRect" parent="InventoryManager"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -371.0
offset_top = -296.0
offset_right = 358.0
offset_bottom = 305.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hwhfl")
region_rect = Rect2(31, 79, 466, 325)
patch_margin_left = 10
patch_margin_top = 55
patch_margin_right = 10
patch_margin_bottom = 23

[node name="Tabs" type="HBoxContainer" parent="InventoryManager/NotebookBackground"]
layout_mode = 0
offset_left = 391.0
offset_top = 39.0
offset_right = 537.0
offset_bottom = 53.0
theme_override_constants/separation = 4

[node name="NotesTab" parent="InventoryManager/NotebookBackground/Tabs" instance=ExtResource("4_ee8kr")]
modulate = Color(0.808998, 0.808998, 0.808998, 1)
layout_mode = 2

[node name="NinePatchRect" parent="InventoryManager/NotebookBackground/Tabs/NotesTab" index="0"]
offset_right = 51.0
offset_bottom = 14.0

[node name="Label" parent="InventoryManager/NotebookBackground/Tabs/NotesTab/NinePatchRect/CenterContainer" index="0"]
text = "Notes"

[node name="InventoryTab" parent="InventoryManager/NotebookBackground/Tabs" instance=ExtResource("4_ee8kr")]
custom_minimum_size = Vector2(74, 14)
layout_mode = 2

[node name="NinePatchRect" parent="InventoryManager/NotebookBackground/Tabs/InventoryTab" index="0"]
offset_right = 74.0
offset_bottom = 14.0

[node name="Label" parent="InventoryManager/NotebookBackground/Tabs/InventoryTab/NinePatchRect/CenterContainer" index="0"]
text = "Inventory"

[node name="Notes" type="ItemList" parent="InventoryManager/NotebookBackground"]
layout_mode = 0
offset_left = 423.0
offset_top = 62.0
offset_right = 705.0
offset_bottom = 572.0
allow_search = false
item_count = 2
item_0/text = "Letter to Sophie"
item_1/text = "Poisoned wine"

[node name="Inventory" type="ItemList" parent="InventoryManager/NotebookBackground"]
layout_mode = 0
offset_left = 423.0
offset_top = 62.0
offset_right = 705.0
offset_bottom = 572.0
allow_search = false
item_count = 2
item_0/text = "Key to shed"
item_1/text = "Lantern"

[node name="LeftFold" type="TextureRect" parent="InventoryManager/NotebookBackground"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -188.0
offset_right = 233.0
offset_bottom = -23.0
grow_vertical = 0
texture = ExtResource("5_8537s")

[editable path="InventoryManager/NotebookBackground/Tabs/NotesTab"]
[editable path="InventoryManager/NotebookBackground/Tabs/InventoryTab"]
